--- a/xdebug.conf
+++ b/xdebug.conf
@@ -1,6 +1,6 @@
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20151012/xdebug.so
 xdebug.remote_enable        = true
-xdebug.remote_connect_back = 1
+xdebug.remote_host          = 172.16.0.1
 xdebug.remote_port          = 9001
 xdebug.profiler_enable      = on
 xdebug.trace_output_dir     = "/var/log/xdebug"
